--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,143 @@
+@font-face {
+  font-family: 'Agbalumo';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/agbalumo-400.woff2") format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C8A, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
+@font-face {
+  font-family: 'Agbalumo';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/agbalumo-400-2.woff2") format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
+}
+
+@font-face {
+  font-family: 'Agbalumo';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/agbalumo-400-3.woff2") format('woff2');
+  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+  font-family: 'Agbalumo';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/agbalumo-400-4.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Playwrite IT Moderna';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url("./assets/fonts/playwrite-it-moderna-100.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'Playwrite IT Moderna';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url("./assets/fonts/playwrite-it-moderna-200.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'Playwrite IT Moderna';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("./assets/fonts/playwrite-it-moderna-300.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'Playwrite IT Moderna';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/playwrite-it-moderna-400.woff2") format('woff2');
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Playwrite IT Moderna", cursive;
+  font-weight: 600;
+  font-size: 18px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #222222;
+  color: #fff;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 2em;
+}
+
+header ul {
+  list-style-type: none;
+  margin-block: 0;
+  padding-inline: 0;
+  float: left;
+}
+
+header ul li {
+  display: inline;
+  margin-right: 1em;
+  position: relative;
+}
+
+.href {
+  color: #6e1beb;
+  text-decoration: inherit;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.href:hover {
+  color: rgb(119, 125, 247);
+}
+
+.href::before {
+  content: " ";
+  width: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 2px;
+  position: absolute;
+  background-color: #646cff;
+  display: inline-block;
+  transition: width 0.25s;
+  bottom: 0;
+}
+
+.href:hover::before {
+  content: " ";
+  width: 100%;
+  height: 2px;
+  background-color: #535bf2;
 }
 
 button {
@@ -46,23 +151,123 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@font-face {
+  src: url("./assets/fonts/bueno.woff2") format("woff2 supports variations"), url("./assets/fonts/bueno-vf.woff2") format("woff2-variations");
+  font-weight: 700;
+  font-family: Bueno-VF;
+  font-synthesis: none
+}
+.logo {
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #6e1beb);
+}
+.hero-container {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-container .hero {
+  position: relative;
+}
+
+::selection {
+  background-color: #eb3f3f;
+  color: white;
+}
+
+.hero-container .hero h1 {
+  font-size: 10em;
+  font-weight: 600;
+  color: #1a1a1a;
+  margin-bottom: 0.5em;
+  font-family: Bueno-VF, sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  color: #fff;
+  text-shadow:
+    -2px -2px 0 #eb1b1b,
+    2px -2px 0 #6e1beb,
+    -2px 2px 0 #6e1beb,
+    2px 2px 0 #6e1beb;
+  animation: light 2s infinite linear;
+  user-select: none;
+}
+
+.hero-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.hero-buttons .button {
+  display: flex;
+  align-items: center;
+}
+
+.hero-buttons .button img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  fill: #fff;
+}
+
+.button {
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #6e1beb;
+  margin: 10px;
+  color: #fff;
+  text-decoration: none;
+  transition: .3s;
+  cursor: pointer;
+  border-radius: 2px;
+  user-select: none;
+}
+
+.button:hover {
+  background-color: #4b0d8c;
+  box-shadow: 0 0 10px #6e1beb;
+}
+
+@keyframes light {
+  0% {
+    filter: drop-shadow(0 0 10px #6e1beb);
+  }
+
+  50% {
+    filter: drop-shadow(0 0 16px #6e1beb);
+  }
+
+  100% {
+    filter: drop-shadow(0 0 10px #6e1beb);
+  }
+}
+
+@media screen and (max-width: 768px) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    font-size: 14px;
   }
-  a:hover {
-    color: #747bff;
+
+  .hero-container .hero h1 {
+    font-size: 6em;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+
 }
