header menu responsive

--- a/src/index.css
+++ b/src/index.css
@@ -566,7 +566,8 @@ footer {
     filter: drop-shadow(0 0 10px var(--primary-color));
   }
 }
-@media screen and (max-width: 1100px){
+
+@media screen and (max-width: 1100px) {
   .hero-container .hero h1 {
     font-size: 8em;
   }
@@ -590,12 +591,14 @@ footer {
   }
 
 }
-@media screen and (max-width: 860px){
+
+@media screen and (max-width: 860px) {
   .hero-container .hero h1 {
     font-size: 7em;
   }
+
   .hero-container .hero svg {
-    top: -34%!important;
+    top: -23% !important;
   }
 }
 
@@ -603,16 +606,23 @@ footer {
   :root {
     font-size: 14px;
   }
+
   .hero-buttons {
     flex-direction: column;
   }
+
+  .hero-container .hero svg {
+    top: -30% !important;
+  }
 }
-@media screen and (max-width: 600px){
+
+@media screen and (max-width: 600px) {
   .hero-container .hero h1 {
     font-size: 6em;
   }
+
   .hero-container .hero svg {
-    top: -35%!important;
+    top: -35% !important;
   }
 }
 
@@ -635,39 +645,52 @@ footer {
   .download-buttons .button {
     padding: 10px;
   }
+
   .hero-container .hero svg {
-    top: -35%!important;
+    top: -35% !important;
   }
 }
-@media screen and (max-width: 500px){
+
+@media screen and (max-width: 500px) {
   .hero-container .hero h1 {
     font-size: 5em;
   }
+
   .hero-container .hero svg {
-    top: -35%!important;
+    top: -35% !important;
   }
 }
-@media screen and (max-width: 430px){
+
+@media screen and (max-width: 430px) {
   .hero-container .hero h1 {
     font-size: 4em;
   }
+
   .hero-container .hero svg {
-    top: -39%!important;
+    top: -39% !important;
+  }
+  header{
+    flex-direction: column;
+    text-align: center;
   }
 }
-@media screen and (max-width: 350px){
+
+@media screen and (max-width: 350px) {
   .hero-container .hero h1 {
     font-size: 3.4em;
   }
+
   .hero-container .hero svg {
-    top: -40%!important;
+    top: -40% !important;
   }
 }
-@media screen and (max-width: 280px){
+
+@media screen and (max-width: 280px) {
   .hero-container .hero h1 {
     font-size: 3em;
   }
+
   .hero-container .hero svg {
-    top: -41%!important;
+    top: -41% !important;
   }
 }
